Adding initial patch by Gautam Worah