@@ -16,6 +16,15 @@
  */
 
 // Configure Java project defaults.
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(11)
+  }
+}
+
+tasks.withType( JavaCompile ).configureEach {
+  options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+}
 
 allprojects {
   plugins.withType(JavaPlugin) {
